# dataloader-rs

./: .travis.yml  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
examples/: async_graphql.rs  cached.rs  eager_cached.rs  juniper.rs  non_cached.rs  simple.rs  tokio.rs
src/: batch_fn.rs  cached.rs  lib.rs  loader.rs  non_cached.rs  runtime.rs
src/eager/: cached.rs  mod.rs
src/tests/: cached.rs  cached_loader.rs  eager_cached.rs  generic.rs  mod.rs  non_cached.rs  non_cached_loader.rs
tests/: cached.rs  dataloaader_non_cached.rs  generic.rs  non_cached.rs  smoke.rs
tests/common/: batcher.rs  mod.rs
