[package]
name = "dataloader"
version = "0.13.0"
edition = "2018"
authors = ["cksac <cs.cksac@gmail.com>"]
description = "Rust implementation of Facebook's DataLoader using async-await."
keywords = ["batcher", "dataloader", "cache"]
categories = ["asynchronous", "caching"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/cksac/dataloader-rs"
homepage = "https://github.com/cksac/dataloader-rs"
documentation = "https://docs.rs/dataloader"

[badges]
travis-ci = { repository = "/cksac/dataloader-rs" }

[features]
default = ["runtime-async-std"]
runtime-async-std = [
    "async-std",
]
runtime-tokio = [
    "tokio"
]

[dependencies]
async-trait = "0.1"
async-std = { version = "1.0", optional = true }
tokio = { version = "0.3", optional = true }

[dev-dependencies]
futures = "0.3"
fake = { version = "2.2", features = ["derive"] }
rand = "0.7"
juniper = { git = "https://github.com/graphql-rust/juniper", rev = "cd66bdb" }
async-graphql = { version = "2.0.9", default-features = false }
serde_json = "1.0"

